aks/webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minecraftsaas-service
spec:
  selector:
    app: minecraftsaas
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
  type: LoadBalancer
