aks/webapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minecraftsaas-ingress
  labels:
    name: minecraftsaas-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: minecraftsaas.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: minecraftsaas-service
            port: 
              number: 3000
